--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2>Contacto</h2>
             <ul>
                 <li>Direccion del Instituto: Las Heras 577</li>
-                <li>Horario de Atencion: 18:30 a 21:30hs (si tenemos ganas)</li>
+                <li>Horario de Atencion: 18:30 a 21:30hs</li>
                 <li>Email: isfd152lasflores@abc.gob.ar</li>
                 <li>Telefono: 02244 - 450716</li>
                 <li>Celular: 2244 - 473093</li>
